# fragmenty-spider

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  env.sample  pyproject.toml  requirements.txt
.github/workflows/: image-publish.yml
fragmenty/: lambda.py  lambda_handler.py  play.py  requirements.txt
fragmenty/core/: algorithm.py  extractors.py  items.py  middlewares.py  pipelines.py  settings.py
fragmenty/core/spiders/: fragment_number.py
fragmenty/scripts/: chart.py  fix-tilda-script.py
