[tool.poetry]
name = "fragmenty"
version = "0.1.0"
description = ""
authors = ["Ehsan Titish <Maders@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
ipython = "^8.11.0"
pymongo = "^4.3.3"
matplotlib = "^3.7.1"
plotly = "^5.13.1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
